Fixing pagination spacing, paddles.

--- a/src/packages/common/css/_components/_pagination.scss
+++ b/src/packages/common/css/_components/_pagination.scss
@@ -117,6 +117,10 @@ $paddleHeight: px-em( 76 );
           margin-right: -695px;
         }
       }
+
+      i {
+        margin-left: -0.5em;
+      }
     }
 
     &.pagination-prev {
@@ -188,7 +192,7 @@ $paddleHeight: px-em( 76 );
     position: absolute;
     left: 50%;
     top: 50%;
-    margin: -0.6em 0 0 -0.6em;
+    margin: -0.6em 0 0 -0.55em;
     color: $white;
     font-size: $font_15_16;
   }
